# simple_distvis

./: .dockerignore  .gitignore  .pre-commit-config.yaml  README.md  app.py  cloudbuild.yaml  pyproject.toml  requirements.txt
.github/workflows/: test.yml
.streamlit/: config.toml
docker/: Dockerfile
docs/: conf.py  index.rst
misc/: demo_hmm_training.py
pages/: 02_beta_posteriori.py  03_Gaussian1D_posteriori.py  05_sample_generator.py  08_clustering.py  09_GMM_EM.py  10_kmeans_clustering.py  10_markov_model.py  beta_bayes.py  diffusion_process.py  gaussian_bayes.py  normal_distribution1d.py  random_walk.py  square_error_decomposition.py  square_error_decomposition_2d.py
src/hmm/: gmm.py  gmm_plot.py  hmm.py  hmm_plot.py  kmeans.py  kmeans_plot.py  sampler.py
tests/: conftest.py  test_gmm.py  test_hmm_forward.py  test_hmm_training.py  test_hmm_viterbi.py  test_kmeans.py  test_math_functions.py  test_pages.py  test_project_config.py
tools/: sample_generator.py
