[project]
name = "kalman1d-velocity-motion"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
packages = [ {include = "src", from = "."} ]
dependencies = [
    "matplotlib>=3.10.6",
    "numpy>=2.3.2",
    "scikit-learn>=1.7.2",
    "scipy>=1.16.1",
    "streamlit>=1.49.1",
    "tqdm>=4.67.1",
]
